# MTestC

app/: build.gradle
app/src/androidTest/java/com/example/mtestc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MyLinkList.cpp  native-lib.cpp
app/src/main/cpp/include/: MylinkList.h
app/src/main/java/com/example/mtestc/: MainActivity.kt
app/src/main/java/com/example/mtestc/jni/: JniTool.java
app/src/main/java/com/example/mtestc/tool/: Test1.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/mtestc/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
